--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "mapvgl": "^1.0.0-beta.140",
     "vue": "^3.2.16"
   },
   "keywords": [
