--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-bmapgl",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "基于百度地图 JavaScript GL 版 API 封装的 Vue3 组件库",
   "anthor": "xianziycg@gmail.com",
   "main": "index.js",
@@ -27,6 +27,7 @@
     "tslint": "^6.1.3",
     "typescript": "^4.5.2",
     "vite": "^2.6.4",
+    "vite-plugin-dts": "^1.0.5",
     "vue-router": "^3.5.3",
     "vue-tsc": "^0.3.0"
   },
