--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vue3-bmapgl",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "description": "基于百度地图 JavaScript GL 版 API 封装的 Vue3 组件库",
   "anthor": "xianziycg@gmail.com",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && cp -f dist/index.js . ",
+    "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
