--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.8",
   "description": "基于百度地图 JavaScript GL 版 API 封装的 Vue3 组件库",
   "anthor": "xianziycg@gmail.com",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && cp -f dist/index.js . ",
+    "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
