--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "vue3-bmapgl",
-  "version": "0.0.11",
+  "version": "0.0.14",
   "description": "基于百度地图 JavaScript GL 版 API 封装的 Vue3 组件库",
   "anthor": "xianziycg@gmail.com",
-  "main": "src/index.js",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
-  "dependencies": {
+  "peerDependencies": {
     "mapvgl": "^1.0.0-beta.140",
     "vue": "^3.2.16"
   },
